<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/st_bg_common_normal"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/develop_setting_style"
                android:text="@string/environment_settings"
                android:textColor="@color/st_text_master_common_white" />

            <TextView
                android:id="@+id/goto_user_page"
                style="@style/develop_setting_style"
                android:text="@string/goto_user_page" />

            <TextView
                android:id="@+id/mvp"
                style="@style/develop_setting_style"
                android:text="@string/mvp" />

            <TextView
                android:id="@+id/mvvm"
                style="@style/develop_setting_style"
                android:text="@string/mvvm" />

            <TextView
                android:id="@+id/mvx"
                style="@style/develop_setting_style"
                android:text="@string/mvx" />

            <TextView
                android:id="@+id/im"
                style="@style/develop_setting_style"
                android:text="@string/im" />

            <TextView
                android:id="@+id/camera"
                style="@style/develop_setting_style"
                android:text="@string/camera" />

            <TextView
                android:id="@+id/draw"
                style="@style/develop_setting_style"
                android:text="@string/draw" />

            <TextView
                android:id="@+id/rxjava"
                style="@style/develop_setting_style"
                android:text="@string/rxjava" />

            <TextView
                android:id="@+id/kotlin_coroutine"
                style="@style/develop_setting_style"
                android:text="@string/kotlin_coroutine" />

            <ImageView
                android:id="@+id/my_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>